add  click  to  sqli logo

--- a/Frontend/Cantine/src/app/core-cantine/main-core-cantine/main-core-cantine.component.html
+++ b/Frontend/Cantine/src/app/core-cantine/main-core-cantine/main-core-cantine.component.html
@@ -8,7 +8,7 @@
         </div>
     </button>
     <div *ngIf="!isconnected">
-        <img alt="cantière-logo" src="../../assets/logo.png">
+      <a href="#"> <img alt="cantière-logo" src="../../assets/logo.png"> </a>
 
     </div>
 
